Update ArtifactResolverService.java